# GLToolbox

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.hpp  Logger.hpp  Mesh.hpp  Model.hpp  OpenGLVersion.hpp  Texture.hpp  Vertex.hpp  Windows.hpp  light.hpp  material.hpp
include/lights/: DirectionalLight.hpp  PointLight.hpp
include/shader/: Shader.hpp  ShaderProgram.hpp
openglCourse/chap1/: chap1.cpp
openglCourse/chap1 - getting started/: chap1.cpp
openglCourse/chap1/shaders/: SimpleFragmentShader.frag  SimpleVertexShader.vert
openglCourse/chap2 - lighting/: chap2.cpp
openglCourse/chap2 - lighting/shaders/: lighting.frag
openglCourse/chap3 - model loading/: chap3.cpp
openglCourse/chap3 - model loading/shaders/: color.frag  color.vert
shaders/: color.frag  color.vert  depth_testing.fs  outline.fs
src/: Camera.cpp  Logger.cpp  Mesh.cpp  Model.cpp  Texture.cpp  Window.cpp
src/lights/: DirectionalLight.cpp  PointLight.cpp
src/shader/: Shader.cpp  Shader.hpp  ShaderLinker.cpp  ShaderLinker.hpp  ShaderProgram.cpp
tests/: CMakeLists.txt  main.cpp
tests/src/: test_shader.cpp
